--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^7.1.1",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
+    "tslint": "^4.2.0",
     "tslint-config-xo": "^1.0.0",
     "typescript": "^2.1.4"
   },
