--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.52",
     "@types/rimraf": "0.0.28",
+    "bash-glob": "^0.1.1",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "mocha": "^3.2.0",
