--- a/.editorconfig
+++ b/.editorconfig
@@ -9,8 +9,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# The indent size used in the `package.json` file cannot be changed
-# https://github.com/npm/npm/pull/3180#issuecomment-16336516
-[{.travis.yml,npm-shrinkwrap.json,package.json}]
+[{.travis.yml,appveyor.yml,npm-shrinkwrap.json,package-lock.json,package.json}]
 indent_style = space
 indent_size = 2
