--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 sudo: false
 language: node_js
+
 node_js:
   - 'node'
+  - '8'
   - '6'
   - '4'
+
+os:
+  - linux
+  - osx
 
 script:
   - npm run build
