--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,9 @@
 		"noUnusedParameters": true,
 		"pretty": true,
 		"declaration": true
-	}
+	},
+	"include": [
+		"typings/**/*",
+		"src/**/*"
+	]
 }
