--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "engines": {
     "node": ">=4.0.0"
   },
-  "typings": "out/fglob.d.ts",
+  "main": "index.js",
+  "typings": "index.d.ts",
   "keywords": [
     "glob",
     "patterns",
