--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"moduleResolution": "node",
 		"rootDir": "src",
 		"outDir": "out",
+		"alwaysStrict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
