refactor(tsconfig): Use modern config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,31 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"target": "es2015",
 		"module": "commonjs",
 		"moduleResolution": "node",
+
 		"rootDir": "src",
 		"outDir": "out",
+
+		"strict": true,
 		"alwaysStrict": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+
 		"forceConsistentCasingInFileNames": true,
+		"noImplicitAny": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"pretty": true,
-		"declaration": true
+
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"downlevelIteration": true,
+		"declaration": true,
+
+		"pretty": true
 	},
 	"include": [
 		"typings/**/*",
