--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mocha": "^4.0.1",
     "rimraf": "^2.6.2",
     "tslint": "^5.8.0",
-    "tslint-config-xo": "^1.4.0",
+    "tslint-config-mrmlnc": "^1.0.0",
     "typescript": "^2.6.2"
   },
   "dependencies": {
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "clean": "rimraf out",
-    "lint": "tslint src/**/*.ts",
+    "lint": "tslint src/**/*.ts -p .",
     "compile": "tsc",
     "test": "rimraf .tmp && mocha out/{,**/}*.spec.js -s 0",
     "build": "npm run clean && npm run lint && npm run compile && npm test",
