--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "clean": "rimraf out",
-    "lint": "tslint src/**/*.ts -p .",
+    "lint": "tslint src/{,**/}*.ts -p . -t stylish",
     "compile": "tsc",
     "test": "rimraf .tmp && mocha out/{,**/}*.spec.js -s 0",
     "build": "npm run clean && npm run lint && npm run compile && npm test",
