refactor(benchmark): Rewrite benchmarks

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/bash-glob": "^2.0.0",
     "@types/compute-stdev": "^1.0.0",
     "@types/execa": "^0.8.0",
-    "@types/fs-extra": "^5.0.0",
     "@types/glob": "^5.0.34",
     "@types/glob-parent": "^3.1.0",
     "@types/globby": "^6.1.0",
@@ -36,7 +35,6 @@
     "compute-stdev": "^1.0.0",
     "execa": "^0.8.0",
     "fast-glob": "^1.0.1",
-    "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "globby": "^7.1.1",
     "minimist": "^1.2.0",
@@ -58,11 +56,18 @@
     "test": "rimraf .tmp && mocha out/{,**/}*.spec.js -s 0",
     "build": "npm run clean && npm run lint && npm run compile && npm test",
     "watch": "npm run clean && npm run lint & npm run compile -- --sourceMap --watch",
-    "bench-1": "node ./out/benchmark --level 1",
-    "bench-5": "node ./out/benchmark --level 5",
-    "bench-10": "node ./out/benchmark --level 10",
-    "bench-50": "node ./out/benchmark --level 50",
-    "bench-100": "node ./out/benchmark --level 100",
-    "bench": "npm run build && npm run bench-1 && npm run bench-5 && npm run bench-10 && npm run bench-50 && npm run bench-100"
+    "bench-async-1": "node ./out/benchmark --depth 1",
+    "bench-async-5": "node ./out/benchmark --depth 5",
+    "bench-async-10": "node ./out/benchmark --depth 10",
+    "bench-async-50": "node ./out/benchmark --depth 50",
+    "bench-async-100": "node ./out/benchmark --depth 100",
+    "bench-async": "npm run bench-async-1 && npm run bench-async-5 && npm run bench-async-10 && npm run bench-async-50 && npm run bench-async-100",
+    "bench-sync-1": "node ./out/benchmark --depth 1 --type sync",
+    "bench-sync-5": "node ./out/benchmark --depth 5 --type sync",
+    "bench-sync-10": "node ./out/benchmark --depth 10 --type sync",
+    "bench-sync-50": "node ./out/benchmark --depth 50 --type sync",
+    "bench-sync-100": "node ./out/benchmark --depth 100 --type sync",
+    "bench-sync": "npm run bench-sync-1 && npm run bench-sync-5 && npm run bench-sync-10 && npm run bench-sync-50 && npm run bench-sync-100",
+    "bench": "npm run build && npm run bench-async && npm run bench-sync"
   }
 }
