--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
 	"compilerOptions": {
-		"target": "es2015",
+		"target": "es5",
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"lib": [
+			"es2015"
+		],
 
 		"rootDir": "src",
 		"outDir": "out",
