--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/execa": "^0.8.0",
     "@types/glob": "^5.0.34",
     "@types/glob-parent": "^3.1.0",
+    "@types/glob-stream": "^6.1.0",
     "@types/globby": "^6.1.0",
     "@types/micromatch": "^3.1.0",
     "@types/minimist": "^1.2.0",
@@ -35,6 +36,7 @@
     "compute-stdev": "^1.0.0",
     "execa": "^0.8.0",
     "fast-glob": "^1.0.1",
+    "glob-stream": "^6.1.0",
     "globby": "^7.1.1",
     "minimist": "^1.2.0",
     "mocha": "^4.0.1",
