--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/glob-parent": "^3.1.0",
     "@types/glob-stream": "^6.1.0",
     "@types/globby": "^6.1.0",
+    "@types/merge2": "^1.1.4",
     "@types/micromatch": "^3.1.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^2.2.44",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "glob-parent": "^3.1.0",
+    "merge2": "^1.2.0",
     "micromatch": "^3.1.4",
     "readdir-enhanced": "^2.1.0"
   },
