--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "clean": "rimraf out",
     "lint": "tslint src/{,**/}*.ts -p . -t stylish",
     "compile": "tsc",
-    "test": "mocha out/{,**/}*.spec.js -s 0",
+    "test": "mocha \"out/**/*.spec.js\" -s 0",
     "build": "npm run clean && npm run lint && npm run compile && npm test",
     "watch": "npm run clean && npm run lint & npm run compile -- --sourceMap --watch",
     "bench-async-1": "node ./out/benchmark --depth 1",
