--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "glob-parent": "3.1.0",
     "merge2": "1.2.1",
     "micromatch": "3.1.5",
-    "readdir-enhanced": "2.2.0"
+    "readdir-enhanced": "mrmlnc/readdir-enhanced#ISSUE-11_monkey_fix"
   },
   "scripts": {
     "clean": "rimraf out",
