--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.0",
-    "@types/readdir-enhanced": "^2.2.0",
     "@types/rimraf": "2.0.2",
     "bash-glob": "^2.0.0",
     "compute-stdev": "^1.0.0",
@@ -48,10 +47,10 @@
     "typescript": "^2.7.1"
   },
   "dependencies": {
+    "@mrmlnc/readdir-enhanced": "^2.2.1",
     "glob-parent": "3.1.0",
     "merge2": "1.2.1",
-    "micromatch": "3.1.5",
-    "readdir-enhanced": "mrmlnc/readdir-enhanced#ISSUE-11_monkey_fix"
+    "micromatch": "3.1.5"
   },
   "scripts": {
     "clean": "rimraf out",
