--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/glob-parent": "^3.1.0",
     "@types/glob-stream": "^6.1.0",
     "@types/globby": "^6.1.0",
+    "@types/is-glob": "^4.0.0",
     "@types/merge2": "^1.1.4",
     "@types/micromatch": "^3.1.0",
     "@types/minimist": "^1.2.0",
@@ -49,6 +50,7 @@
   "dependencies": {
     "@mrmlnc/readdir-enhanced": "^2.2.1",
     "glob-parent": "^3.1.0",
+    "is-glob": "^4.0.0",
     "merge2": "^1.2.1",
     "micromatch": "^3.1.8"
   },
