--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,11 @@
 build: off
 
+notifications:
+  - provider: Email
+    on_build_success: false
+    on_build_failure: false
+    on_build_status_changed: false
+
 branches:
   only:
     - master
