feat(ci): Enable cache for node_modules

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,9 @@ notifications:
     on_build_failure: false
     on_build_status_changed: false
 
+cache:
+  - node_modules
+
 branches:
   only:
     - master
