--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ matrix:
 
 environment:
   matrix:
+    - nodejs_version: "10"
     - nodejs_version: "8"
     - nodejs_version: "6"
     - nodejs_version: "4"
@@ -27,7 +28,6 @@ platform:
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install -g npm
   - npm install
 
 test_script:
