--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@mrmlnc/readdir-enhanced": "^2.2.1",
+    "@nodelib/fs.stat": "^1.0.1",
     "glob-parent": "^3.1.0",
     "is-glob": "^4.0.0",
     "merge2": "^1.2.1",
