--- a/package.json
+++ b/package.json
@@ -22,40 +22,40 @@
   "devDependencies": {
     "@types/bash-glob": "^2.0.0",
     "@types/compute-stdev": "^1.0.0",
-    "@types/easy-table": "0.0.31",
+    "@types/easy-table": "^0.0.32",
     "@types/execa": "^0.9.0",
-    "@types/glob": "^5.0.35",
+    "@types/glob": "^7.1.1",
     "@types/glob-parent": "^3.1.0",
     "@types/glob-stream": "^6.1.0",
-    "@types/globby": "^6.1.0",
+    "@types/globby": "^8.0.0",
     "@types/is-glob": "^4.0.0",
     "@types/merge2": "^1.1.4",
     "@types/micromatch": "^3.1.0",
     "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^9.6.6",
-    "@types/rimraf": "2.0.2",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.0",
+    "@types/rimraf": "^2.0.2",
     "bash-glob": "^2.0.0",
     "compute-stdev": "^1.0.0",
     "easy-table": "^1.1.1",
-    "execa": "^0.10.0",
+    "execa": "^0.9.0",
     "fast-glob": "^2.2.0",
     "glob": "^7.1.2",
     "glob-stream": "^6.1.0",
     "globby": "^8.0.1",
     "minimist": "^1.2.0",
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
-    "tslint": "^5.9.1",
+    "tslint": "^5.11.0",
     "tslint-config-mrmlnc": "^1.0.0",
-    "typescript": "^2.8.3"
+    "typescript": "^3.1.3"
   },
   "dependencies": {
     "@mrmlnc/readdir-enhanced": "^2.2.1",
-    "@nodelib/fs.stat": "^1.0.1",
+    "@nodelib/fs.stat": "^1.1.2",
     "glob-parent": "^3.1.0",
     "is-glob": "^4.0.0",
-    "merge2": "^1.2.1",
+    "merge2": "^1.2.3",
     "micromatch": "^3.1.10"
   },
   "scripts": {
