--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{.travis.yml,appveyor.yml,npm-shrinkwrap.json,package-lock.json,package.json}]
+[{.travis.yml,circle.yml,appveyor.yml}]
+indent_style = space
+indent_size = 2
+
+[{npm-shrinkwrap.json,package-lock.json,package.json}]
 indent_style = space
 indent_size = 2
