--- a/.vsts/build.yml
+++ b/.vsts/build.yml
@@ -11,35 +11,41 @@ jobs:
   - job: Windows
     strategy:
       matrix:
-        (Node.js 4): { node_version: 4 }
-        (Node.js 6): { node_version: 6 }
-        (Node.js 8): { node_version: 8 }
-        (Node.js 10): { node_version: 10 }
+        (Node.js 4): { node_version: 4.x }
+        (Node.js 6): { node_version: 6.x }
+        (Node.js 8): { node_version: 8.x }
+        (Node.js 10): { node_version: 10.x }
     pool:
       vmImage: 'vs2017-win2016'
     steps:
       - template: build-steps.yml
+        parameters:
+          node_version: $(node_version)
 
   - job: Linux
     strategy:
       matrix:
-        (Node.js 4): { node_version: 4 }
-        (Node.js 6): { node_version: 6 }
-        (Node.js 8): { node_version: 8 }
-        (Node.js 10): { node_version: 10 }
+        (Node.js 4): { node_version: 4.x }
+        (Node.js 6): { node_version: 6.x }
+        (Node.js 8): { node_version: 8.x }
+        (Node.js 10): { node_version: 10.x }
     pool:
       vmImage: 'ubuntu-16.04'
     steps:
       - template: build-steps.yml
+        parameters:
+          node_version: $(node_version)
 
   - job: macOS
     strategy:
       matrix:
-        (Node.js 4): { node_version: 4 }
-        (Node.js 6): { node_version: 6 }
-        (Node.js 8): { node_version: 8 }
-        (Node.js 10): { node_version: 10 }
+        (Node.js 4): { node_version: 4.x }
+        (Node.js 6): { node_version: 6.x }
+        (Node.js 8): { node_version: 8.x }
+        (Node.js 10): { node_version: 10.x }
     pool:
       vmImage: 'xcode9-macos10.13'
     steps:
       - template: build-steps.yml
+        parameters:
+          node_version: $(node_version)
