--- a/.vsts/build-steps.yml
+++ b/.vsts/build-steps.yml
@@ -12,6 +12,7 @@ steps:
       command: install
 
   - script: npm run lint
+    condition: ne(variables['node_version'], '4.x')
     displayName: Run Hygiene Checks
 
   - script: npm run compile
