--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
     "tiny-glob": "^0.2.3",
-    "tslint": "^5.11.0",
-    "tslint-config-mrmlnc": "^1.0.0",
+    "tslint": "^5.12.0",
+    "tslint-config-mrmlnc": "^2.0.1",
     "typescript": "^3.1.3"
   },
   "dependencies": {
@@ -65,8 +65,8 @@
     "compile": "tsc",
     "test": "mocha \"out/**/*.spec.js\" -s 0",
     "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
-    "build": "npm run clean && npm run lint && npm run compile && npm test",
-    "watch": "npm run clean && npm run lint & npm run compile -- --sourceMap --watch",
+    "build": "npm run clean && npm run compile && npm run lint && npm test",
+    "watch": "npm run clean && npm run compile -- --sourceMap --watch",
     "bench-async-1": "node ./out/benchmark --depth 1",
     "bench-async-5": "node ./out/benchmark --depth 5",
     "bench-async-10": "node ./out/benchmark --depth 10",
