--- a/package.json
+++ b/package.json
@@ -63,18 +63,12 @@
     "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
     "build": "npm run clean && npm run compile && npm run lint && npm test",
     "watch": "npm run clean && npm run compile -- --sourceMap --watch",
-    "bench-async-1": "node ./out/benchmark --depth 1",
-    "bench-async-5": "node ./out/benchmark --depth 5",
-    "bench-async-10": "node ./out/benchmark --depth 10",
-    "bench-async-50": "node ./out/benchmark --depth 50",
-    "bench-async-100": "node ./out/benchmark --depth 100",
-    "bench-async": "npm run bench-async-1 && npm run bench-async-5 && npm run bench-async-10 && npm run bench-async-50 && npm run bench-async-100",
-    "bench-sync-1": "node ./out/benchmark --depth 1 --type sync",
-    "bench-sync-5": "node ./out/benchmark --depth 5 --type sync",
-    "bench-sync-10": "node ./out/benchmark --depth 10 --type sync",
-    "bench-sync-50": "node ./out/benchmark --depth 50 --type sync",
-    "bench-sync-100": "node ./out/benchmark --depth 100 --type sync",
-    "bench-sync": "npm run bench-sync-1 && npm run bench-sync-5 && npm run bench-sync-10 && npm run bench-sync-50 && npm run bench-sync-100",
-    "bench": "npm run build && npm run bench-async && npm run bench-sync"
+    "bench": "npm run bench-async && npm run bench-sync",
+    "bench-async": "npm run bench-async-flatten && npm run bench-async-deep",
+    "bench-sync": "npm run bench-sync-flatten && npm run bench-sync-deep",
+    "bench-async-flatten": "node ./out/benchmark --type async --pattern *",
+    "bench-async-deep": "node ./out/benchmark --type async --pattern **",
+    "bench-sync-flatten": "node ./out/benchmark --type sync --pattern *",
+    "bench-sync-deep": "node ./out/benchmark --type sync --pattern **"
   }
 }
