--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^11.13.6",
     "@types/rimraf": "^2.0.2",
+    "@types/sinon": "^7.0.12",
     "compute-stdev": "^1.0.0",
     "easy-table": "^1.1.1",
     "execa": "^1.0.0",
@@ -41,6 +42,7 @@
     "minimist": "^1.2.0",
     "mocha": "^6.1.4",
     "rimraf": "^2.6.2",
+    "sinon": "^7.3.2",
     "tiny-glob": "^0.2.3",
     "tslint": "^5.16.0",
     "tslint-config-mrmlnc": "^2.1.0",
