--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
     "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
     "build": "npm run clean && npm run compile && npm run lint && npm test",
     "watch": "npm run clean && npm run compile -- --sourceMap --watch",
-    "bench": "npm run bench-async && npm run bench-sync",
+    "bench": "npm run bench-async && npm run bench-stream && npm run bench-sync",
     "bench-async": "npm run bench-async-flatten && npm run bench-async-deep",
+    "bench-stream": "npm run bench-stream-flatten && npm run bench-stream-deep",
     "bench-sync": "npm run bench-sync-flatten && npm run bench-sync-deep",
     "bench-async-flatten": "node ./out/benchmark --type async --pattern \"*\"",
     "bench-async-deep": "node ./out/benchmark --type async --pattern \"**\"",
+    "bench-stream-flatten": "node ./out/benchmark --type stream --pattern \"*\"",
+    "bench-stream-deep": "node ./out/benchmark --type stream --pattern \"**\"",
     "bench-sync-flatten": "node ./out/benchmark --type sync --pattern \"*\"",
     "bench-sync-deep": "node ./out/benchmark --type sync --pattern \"**\""
   }
