--- a/.vsts/build-steps.yml
+++ b/.vsts/build-steps.yml
@@ -20,5 +20,11 @@ steps:
   - script: npm run test
     displayName: Run Unit Tests
 
-  - script: npm run smoke
-    displayName: Run Smoke Tests
+  - script: npm run smoke:sync
+    displayName: Run Smoke Tests (sync)
+
+  - script: npm run smoke:async
+    displayName: Run Smoke Tests (async)
+
+  - script: npm run smoke:stream
+    displayName: Run Smoke Tests (stream)
