--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "compile": "tsc",
     "test": "mocha \"out/**/*.spec.js\" -s 0",
     "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
+    "smoke:sync": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(sync\\)\"",
+    "smoke:async": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(async\\)\"",
+    "smoke:stream": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(stream\\)\"",
     "build": "npm run clean && npm run compile && npm run lint && npm test",
     "watch": "npm run clean && npm run compile -- --sourceMap --watch",
     "bench": "npm run bench-async && npm run bench-stream && npm run bench-sync",
