--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
     "bench-async": "npm run bench-async-flatten && npm run bench-async-deep",
     "bench-stream": "npm run bench-stream-flatten && npm run bench-stream-deep",
     "bench-sync": "npm run bench-sync-flatten && npm run bench-sync-deep",
-    "bench-async-flatten": "node ./out/benchmark --type async --pattern \"*\"",
-    "bench-async-deep": "node ./out/benchmark --type async --pattern \"**\"",
-    "bench-stream-flatten": "node ./out/benchmark --type stream --pattern \"*\"",
-    "bench-stream-deep": "node ./out/benchmark --type stream --pattern \"**\"",
-    "bench-sync-flatten": "node ./out/benchmark --type sync --pattern \"*\"",
-    "bench-sync-deep": "node ./out/benchmark --type sync --pattern \"**\""
+    "bench-async-flatten": "node ./out/benchmark --mode async --pattern \"*\"",
+    "bench-async-deep": "node ./out/benchmark --mode async --pattern \"**\"",
+    "bench-stream-flatten": "node ./out/benchmark --mode stream --pattern \"*\"",
+    "bench-stream-deep": "node ./out/benchmark --mode stream --pattern \"**\"",
+    "bench-sync-flatten": "node ./out/benchmark --mode sync --pattern \"*\"",
+    "bench-sync-deep": "node ./out/benchmark --mode sync --pattern \"**\""
   }
 }
