--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/sinon": "^7.0.13",
     "compute-stdev": "^1.0.0",
     "easy-table": "^1.1.1",
+    "eslint": "^6.3.0",
+    "eslint-config-mrmlnc": "^1.0.0",
     "execa": "^1.0.0",
     "fast-glob": "^3.0.2",
     "glob": "^7.1.4",
@@ -43,9 +45,7 @@
     "rimraf": "^2.6.3",
     "sinon": "^7.3.2",
     "tiny-glob": "^0.2.6",
-    "tslint": "^5.18.0",
-    "tslint-config-mrmlnc": "^2.1.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "@nodelib/fs.stat": "^2.0.1",
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "clean": "rimraf out",
-    "lint": "tslint \"src/**/*.ts\" -p . -t stylish",
+    "lint": "eslint \"src/**/*.ts\" --cache",
     "compile": "tsc",
     "test": "mocha \"out/**/*.spec.js\" -s 0",
     "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
