--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "@nodelib/fs.walk": "^1.2.3",
     "glob-parent": "^5.1.2",
     "merge2": "^1.3.0",
-    "micromatch": "^4.0.2",
-    "picomatch": "^2.2.1"
+    "micromatch": "^4.0.4"
   },
   "scripts": {
     "clean": "rimraf out",
