--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-mrmlnc": "^1.1.0",
     "execa": "^2.0.4",
     "fast-glob": "^3.0.4",
+    "fdir": "^5.1.0",
     "glob": "^7.1.4",
     "is-ci": "^2.0.0",
     "log-update": "^4.0.0",
