fix: directory matching with trailing slashes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": "mrmlnc"
+	"extends": "mrmlnc",
+	"rules": {
+		"no-magic-numbers": "off",
+		"@typescript-eslint/no-magic-numbers": "off"
+	}
 }
