--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "easy-table": "^1.1.1",
     "eslint": "^6.5.1",
     "eslint-config-mrmlnc": "^1.1.0",
+    "eslint-plugin-mocha": "^6.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-unicorn": "^19.0.0",
     "execa": "^2.0.4",
     "fast-glob": "^3.0.4",
     "fdir": "^5.1.0",
