--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,23 +13,11 @@ env:
   SNAPSHOT_SKIP_PRUNING: 1
 
 jobs:
-  cancel:
-    name: Cancel previous jobs
-    if: github.ref != 'refs/heads/master'
-    runs-on: ubuntu-latest
-    timeout-minutes: 3
-    steps:
-      - name: Cancel previous jobs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-          workflow_id: 4197767
-          access_token: ${{ github.token }}
-
   test:
     name: Node.js ${{ matrix.node_version }} on ${{ matrix.os }}
-    if: always()
-    needs:
-      - cancel
+    concurrency:
+      group: ${{ github.workflow }}-build-${{ matrix.os }}-${{ matrix.node_version }}-${{ github.ref }}
+      cancel-in-progress: true
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
