ci: run benchmarks for some events

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,7 +1,13 @@
 name: Benchmark
 
 on:
-  - push
+  push:
+    branches:
+      - master
+      - releases/*
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   product:
