--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^6.2.1",
     "rimraf": "^3.0.0",
     "sinon": "^7.5.0",
+    "snap-shot-it": "^7.9.10",
     "tiny-glob": "^0.2.6",
     "typescript": "^3.6.3"
   },
@@ -68,10 +69,10 @@
     "lint": "eslint \"src/**/*.ts\" --cache",
     "compile": "tsc",
     "test": "mocha \"out/**/*.spec.js\" -s 0",
-    "smoke": "mocha \"out/**/*.smoke.js\" -s 0",
-    "smoke:sync": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(sync\\)\"",
-    "smoke:async": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(async\\)\"",
-    "smoke:stream": "mocha \"out/**/*.smoke.js\" -s 0 --grep \"\\(stream\\)\"",
+    "test:e2e": "mocha \"out/**/*.e2e.js\" -s 0",
+    "test:e2e:sync": "mocha \"out/**/*.e2e.js\" -s 0 --grep \"\\(sync\\)\"",
+    "test:e2e:async": "mocha \"out/**/*.e2e.js\" -s 0 --grep \"\\(async\\)\"",
+    "test:e2e:stream": "mocha \"out/**/*.e2e.js\" -s 0 --grep \"\\(stream\\)\"",
     "build": "npm run clean && npm run compile && npm run lint && npm test",
     "watch": "npm run clean && npm run compile -- --sourceMap --watch",
     "bench": "npm run bench-async && npm run bench-stream && npm run bench-sync",
