--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [8, 10, 12, 14, 16, 18, 20]
+        node_version: [16.14.0, 16, 18, 20]
         os:
           - ubuntu-latest
           - macos-latest
