--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"outDir": "out",
 
 		"strict": true,
+		"noImplicitOverride": true,
 		"alwaysStrict": true,
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
