--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2017",
+		"lib": ["es2017", "ES2021.String"],
 		"module": "commonjs",
 		"moduleResolution": "node",
 
