--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,8 +25,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
-      - name: Compile sources
-        run: npm run compile
+      - name: Prepare bundle
+        run: npm run bundle
       - name: Benchmark (async)
         run: npm run bench:product:async
       - name: Benchmark (stream)
@@ -58,8 +58,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
-      - name: Compile sources
-        run: npm run compile
+      - name: Prepare bundle
+        run: npm run bundle
       - name: Benchmark (async)
         run: npm run bench:regression:async
       - name: Benchmark (stream)
