ci: update actions

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,12 +2,9 @@ name: Benchmark
 
 on:
   push:
-    branches:
-      - master
-      - releases/*
+    branches: ['master', 'releases/*']
   pull_request:
-    branches:
-      - '*'
+    branches: ['*']
 
 jobs:
   product:
@@ -18,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Install dependencies
@@ -51,9 +48,9 @@ jobs:
       BENCHMARK_OPTIONS: ${{ matrix.benchmark_options }}
     steps:
       - name: Setup repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Install dependencies
