--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,13 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches:
-      - master
-      - "!dependabot/**"
+    branches: ['master']
   pull_request:
-    branches:
-      - master
-      - "!dependabot/**"
+    branches: ['master']
   schedule:
     - cron: "0 0 * * 0"
   workflow_dispatch:
@@ -27,7 +23,7 @@ jobs:
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
