--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [16.14.0, 16, 18, 20]
+        node_version: [16.14.0, 16, 18, 20, 22]
         os:
           - ubuntu-latest
           - macos-latest
