build: fix issues with project build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
 
 		"forceConsistentCasingInFileNames": true,
 		"verbatimModuleSyntax": false,
+		"esModuleInterop": true,
 
 		"downlevelIteration": true,
 		"declaration": true,
