build: update eslint

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/sinon": "^17.0.3",
     "bencho": "^0.1.1",
     "esbuild": "^0.24.0",
-    "eslint": "^8.53.0",
-    "eslint-config-mrmlnc": "^4.1.0",
+    "eslint": "9.14.0",
+    "eslint-config-mrmlnc": "^5.0.0",
     "execa": "^7.2.0",
     "fast-glob": "^3.3.2",
     "fdir": "^6.4.2",
