--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         run: npm install
       - name: Run Hygiene Checks
         run: npm run lint
+        if: ${{ matrix.node_version >= 18 }}
       - name: Prepare bundle
         run: npm run bundle
       - name: Run unit tests
