--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
     "snap-shot-it": "^7.9.10",
+    "tinyglobby": "^0.2.10",
     "typescript": "^5.7.2"
   },
   "dependencies": {
