build: bundle dts files

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/picomatch": "^3.0.1",
     "@types/sinon": "^17.0.3",
     "bencho": "^0.1.1",
+    "dts-bundle-generator": "^9.5.1",
     "esbuild": "^0.24.0",
     "eslint": "9.14.0",
     "eslint-config-mrmlnc": "^5.0.0",
@@ -68,7 +69,7 @@
     "_build:compile": "npm run clean && npm run compile",
     "build": "npm run _build:compile && npm run lint && npm test",
     "watch": "npm run _build:compile -- -- --sourceMap --watch",
-    "_bundle:dts": "tsc --emitDeclarationOnly --outDir ./build",
+    "_bundle:dts": "dts-bundle-generator ./src/index.ts --out-file=./build/index.d.ts --export-referenced-types=false --external-inlines=@nodelib/fs.walk @nodelib/fs.scandir @nodelib/fs.stat",
     "_bundle:ts": "esbuild --bundle ./src/index.ts --outfile=./build/index.js --platform=node --target=node18.18 --format=cjs",
     "_bundle:build": "npm run _bundle:dts && npm run _bundle:ts",
     "_bundle:test:replace": "cp ./build/index.js ./out",
