--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "build": "npm run _build:compile && npm run lint && npm test",
     "watch": "npm run _build:compile -- -- --sourceMap --watch",
     "_bundle:dts": "dts-bundle-generator ./src/index.ts --out-file=./build/index.d.ts --export-referenced-types=false --external-inlines=@nodelib/fs.walk @nodelib/fs.scandir @nodelib/fs.stat",
-    "_bundle:ts": "esbuild --bundle ./src/index.ts --outfile=./build/index.js --platform=node --target=node18.18 --format=cjs",
-    "_bundle:build": "npm run _bundle:dts && npm run _bundle:ts",
+    "_bundle:js": "esbuild --bundle ./out/index.js --outfile=./build/index.js --platform=node --target=node18.18 --format=cjs",
+    "_bundle:build": "npm run _bundle:dts && npm run _bundle:js",
     "_bundle:test:replace": "cp ./build/index.js ./out",
     "_bundle:test": "npm run _bundle:test:replace",
     "bundle": "npm run _build:compile && npm run _bundle:build && npm run _bundle:test",
